--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,8 @@
 body{
     padding: 0px;
     margin: 0px;
+    display: flex;
+    min-width: 1080px;
+    flex-direction: column;
+    align-items: center;
 }
