--- a/public/index.css
+++ b/public/index.css
@@ -1,8 +1,18 @@
 body{
     padding: 0px;
     margin: 0px;
-    display: flex;
+    /* display: flex;
     min-width: 1080px;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
+}
+
+#root{
+    height: 100%;
+}
+
+
+
+body, html {
+    height: 100%;
 }
