--- a/public/index.css
+++ b/public/index.css
@@ -1,14 +1,12 @@
 body{
     padding: 0px;
     margin: 0px;
-    /* display: flex;
-    min-width: 1080px;
-    flex-direction: column;
-    align-items: center; */
+    
 }
 
 #root{
     height: 100%;
+    background-color: rgb(229, 229, 229);
 }
 
 
