--- a/src/screen/add-pet/AddImage.css
+++ b/src/screen/add-pet/AddImage.css
@@ -1,13 +1,16 @@
-.container{
-    position: relative;
+.container {
+  position: relative;
 }
 
-.background-img{
-    position: absolute;
-    width: 100%;
-    height: 100%;
+.background-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
 }
 
-.ic-delete{
-    position: absolute;
+.ic-delete {
+  position: absolute;
+  right: 5px;
+  top: 5px;
 }
