--- a/public/index.css
+++ b/public/index.css
@@ -1,14 +1,23 @@
-body{
-    padding: 0px;
-    margin: 0px;
-    min-height: 100vh;
-}
-
-#root{
+#root {
     min-height: 100vh;
     background: rgb(229, 229, 229);
 }
 
 .class-app {
     min-height: inherit;
+}
+
+body {
+    margin: 0;
+    min-height: 100vh;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
 }
