--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,13 @@
     /* Optional: just make scrollbar invisible */
 }
 
-.ce-chat-title-text {
-    color: #00C181 !important;
-}
+/*.ce-chat-title-text {*/
+/*    color: #00C181 !important;*/
+/*}*/
 
-.ce-chat-subtitle-text {
-    color: #00C181 !important;
-}
+/*.ce-chat-subtitle-text {*/
+/*    color: #00C181 !important;*/
+/*}*/
 
 #ce-send-message-button {
     background-color: #00C181 !important;
