--- a/src/screen/login/style.css
+++ b/src/screen/login/style.css
@@ -8,10 +8,14 @@
     text-align: center;
     padding: 5px;
 }
-.modal > .content {
-    width: 100%;
-    padding: 10px 5px;
+.modal > .popup-content {
+    margin: auto;
+    background: rgba(0, 0, 0, 0);
+    width: auto;
+    padding: 5px;
+    border: none;
 }
+
 .modal > .actions {
     width: 100%;
     padding: 10px 5px;
