--- a/src/screen/add-pet/styles.css
+++ b/src/screen/add-pet/styles.css
@@ -4,3 +4,17 @@
     width: 100%;
 
 }
+
+
+/*input:required {*/
+/*    border-color: #800000;*/
+/*    border-width: 3px;*/
+/*}*/
+
+/*input:required:invalid {*/
+/*    border-color: #c00000;*/
+/*}*/
+
+/*input:invalid {*/
+/*    background-color: #ffdddd;*/
+/*}*/
